--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th rowspan="2" class="indice-v">teste</th>
-                    <th colspan="4" class="indice-h">Índice de severidade do dano</th>
+                    <th rowspan="2" class="indice-v">
+                        <!-- <input type="text" value="índice de probabilidade do dano"> -->
+                        <!-- <textarea class="txtarea"></textarea> -->
+                        <div class="txtdiv" contenteditable="true">Índice de probabilidade do dano</div>
+                    </th>
+                    <th colspan="4" class="indice-h"><input type="text" value="Índice de severidade do dano"></th>
                 </tr>
                 <tr>
                     <th>Leve (2)</th>
